Remove "sdk" from name

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,6 +3,6 @@ FILE(GLOB CRYPTO_SDK_SRC
     "*.cpp"
 )
 
-ADD_LIBRARY(crypto-sdk STATIC ${CRYPTO_SDK_SRC})
+ADD_LIBRARY(crypto STATIC ${CRYPTO_SDK_SRC})
 
-TARGET_INCLUDE_DIRECTORIES(crypto-sdk PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+TARGET_INCLUDE_DIRECTORIES(crypto PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
