--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,6 @@ FILE(GLOB CRYPTO_SDK_TEST_SRC
     "*.cpp"
 )
 
-ADD_EXECUTABLE(crypto-sdk-test ${CRYPTO_SDK_TEST_SRC})
+ADD_EXECUTABLE(crypto-test ${CRYPTO_SDK_TEST_SRC})
 
-TARGET_LINK_LIBRARIES(crypto-sdk-test LINK_PUBLIC crypto-sdk)
+TARGET_LINK_LIBRARIES(crypto-test LINK_PUBLIC crypto)
