--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../libsodium.cmake)
+
 file(GLOB CRYPTO_SDK_SRC
     "*.h"
     "*.cpp"
@@ -6,3 +8,5 @@ file(GLOB CRYPTO_SDK_SRC
 add_library(crypto STATIC ${CRYPTO_SDK_SRC})
 
 target_include_directories(crypto PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(crypto LINK_PUBLIC nacl_lib)
