--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ project(crypto-sdk)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+include(CTest)
+enable_testing()
+
 add_subdirectory(lib)
 add_subdirectory(test)
