--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(crypto STATIC ${CRYPTO_SDK_SRC})
 
 target_include_directories(crypto PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(crypto LINK_PUBLIC nacl_lib)
+target_link_libraries(crypto LINK_PUBLIC nacl-lib)
