--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB CRYPTO_SDK_TEST_SRC
 add_executable(crypto-test ${CRYPTO_SDK_TEST_SRC})
 add_dependencies(crypto-test googletest)
 
-target_link_libraries(crypto-test LINK_PUBLIC crypto ${GTEST_LIBRARY})
+target_link_libraries(crypto-test LINK_PUBLIC crypto ${GTEST_LIBRARY} ${GMOCK_LIBRARY})
 
 # Tell ctest about my tests
 include(GoogleTest)
