Replace libsodium with libgcrypt

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,5 @@
-include(../libsodium.cmake)
+include(../libgpg-error.cmake)
+include(../libgcrypt.cmake)
 
 file(GLOB CRYPTO_SDK_SRC
     "*.h"
@@ -6,8 +7,8 @@ file(GLOB CRYPTO_SDK_SRC
 )
 
 add_library(crypto STATIC ${CRYPTO_SDK_SRC})
-add_dependencies(crypto libsodium)
+add_dependencies(crypto libgcrypt)
 
 target_include_directories(crypto PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(crypto LINK_PUBLIC nacl-lib)
+target_link_libraries(crypto LINK_PUBLIC gcrypt)
