--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,12 @@ project(crypto-sdk)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+include (TestBigEndian)
+TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
+if(IS_BIG_ENDIAN)
+ message(FATAL_ERROR "Big endian isn't supported at the moment")
+endif()
+
 include(CTest)
 enable_testing()
 
