--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,8 @@ set(LIBGCRYPT_LIBRARY ${LIBGCRYPT_DIR}/lib/libgcrypt.a)
 
 add_executable(crypto-test ${CRYPTO_SDK_TEST_SRC})
 
-target_link_libraries(crypto-test LINK_PUBLIC crypto
+target_link_libraries(crypto-test LINK_PUBLIC
+  crypto
   ${GTEST_LIBRARY}
   ${GMOCK_LIBRARY}
   ${LIBGCRYPT_LIBRARY}
