Convert crypto-sdk to a shared library and rename it to "libcryptosdk".

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,15 +11,15 @@ set(LIBGCRYPT_DIR ${CMAKE_BINARY_DIR}/libgcrypt)
 set(LIBGCRYPT_LIBRARY ${LIBGCRYPT_DIR}/lib/libgcrypt.a)
 set(LIBGCRYPT_INCLUDE_DIRS ${LIBGCRYPT_DIR}/include/)
 
-add_library(crypto STATIC ${CRYPTO_SDK_SRC})
+add_library(cryptosdk SHARED ${CRYPTO_SDK_SRC})
 
-target_include_directories(crypto PUBLIC
+target_include_directories(cryptosdk PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
-  ${LIBGPG_ERROR_INCLUDE_DIRS}
   ${LIBGCRYPT_INCLUDE_DIRS}
+  ${LIBGPG_ERROR_INCLUDE_DIRS}
 )
 
-target_link_libraries(crypto LINK_PUBLIC
-  ${LIBGPG_ERROR_LIBRARY}
+target_link_libraries(cryptosdk LINK_PUBLIC
   ${LIBGCRYPT_LIBRARY}
+  ${LIBGPG_ERROR_LIBRARY}
 )
