Integrate the native crypto-sdk with the JNI library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,28 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix" FORCE)
 
+if(PLATFORM STREQUAL "ANDROID")
+  if(ANDROID_ABI STREQUAL "armeabi-v7a")
+    set(ARCH "armv7-a")
+  elseif(ANDROID_ABI STREQUAL "arm64-v8a")
+    set(ARCH "armv8-a")
+  elseif(ANDROID_ABI STREQUAL "x86")
+    set(ARCH "i686")
+  elseif(ANDROID_ABI STREQUAL "x86_64")
+    set(ARCH "westmere")
+  else()
+    message(FATAL_ERROR "Unsupported Android architecture: ${ANDROID_ABI}")
+  endif()
+
+  set(BUILD_DIR "android/${ARCH}")
+elseif(PLATFORM STREQUAL "IOS")
+  set(BUILD_DIR "ios")
+endif()
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${BUILD_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${BUILD_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${BUILD_DIR}/bin)
+
 set(CI $ENV{CI})
 
 project(crypto-sdk)
@@ -29,10 +51,8 @@ add_subdirectory(lib)
 
 # iOS and Android don't support Google Test test runner.
 if(PLATFORM STREQUAL "IOS" OR PLATFORM STREQUAL "ANDROID")
-  message("PLATFORM: ${PLATFORM}")
   message("Google Test is unsupported on ${PLATFORM}")
 else()
-  message("PLATFORM: ${PLATFORM}")
   include(CTest)
   enable_testing()
 
