Prepend local platform name to build output as well (e.g., "mac" or "linux").

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,10 @@ if(PLATFORM STREQUAL "ANDROID")
   set(BUILD_DIR "android/${ARCH}")
 elseif(PLATFORM STREQUAL "IOS")
   set(BUILD_DIR "ios")
+elseif(PLATFORM STREQUAL "Mac")
+  set(BUILD_DIR "mac")
+elseif(PLATFORM STREQUAL "Linux")
+  set(BUILD_DIR "linux")
 endif()
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${BUILD_DIR}/lib)
