--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -28,9 +28,12 @@ else()
   if(PLATFORM STREQUAL "IOS")
     set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/ios/libgpg-error)
     set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/ios/libgcrypt)
-  else()
-    set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/libgpg-error)
-    set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/libgcrypt)
+  elseif(PLATFORM STREQUAL "Mac")
+    set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/mac/libgpg-error)
+    set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/mac/libgcrypt)
+  elseif(PLATFORM STREQUAL "Linux")
+    set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/linux/libgpg-error)
+    set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/linux/libgcrypt)
   endif()
 
   set(LIBGPG_ERROR_LIBRARY ${LIBGPG_ERROR_DIR}/lib/libgpg-error.a)
