--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,10 +5,15 @@ file(GLOB CRYPTO_SDK_TEST_SRC
   "*.cpp"
 )
 
-set(LIBGPG_ERROR_DIR ${CMAKE_BINARY_DIR}/libgpg-error)
-set(LIBGPG_ERROR_LIBRARY ${LIBGPG_ERROR_DIR}/lib/libgpg-error.a)
+if(PLATFORM STREQUAL "Mac")
+  set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/mac/libgpg-error)
+  set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/mac/libgcrypt)
+elseif(PLATFORM STREQUAL "Linux")
+  set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/linux/libgpg-error)
+  set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/linux/libgcrypt)
+endif()
 
-set(LIBGCRYPT_DIR ${CMAKE_BINARY_DIR}/libgcrypt)
+set(LIBGPG_ERROR_LIBRARY ${LIBGPG_ERROR_DIR}/lib/libgpg-error.a)
 set(LIBGCRYPT_LIBRARY ${LIBGCRYPT_DIR}/lib/libgcrypt.a)
 
 add_executable(crypto-test ${CRYPTO_SDK_TEST_SRC})
