--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,9 @@ if(PLATFORM STREQUAL "ANDROID")
 elseif(PLATFORM STREQUAL "IOS")
   set(BUILD_DIR "ios")
 elseif(PLATFORM STREQUAL "Mac")
-  set(BUILD_DIR "mac")
+  set(BUILD_DIR "Mac")
 elseif(PLATFORM STREQUAL "Linux")
-  set(BUILD_DIR "linux")
+  set(BUILD_DIR "Linux")
 endif()
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${BUILD_DIR}/lib)
