Fix platform case sensitivity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,9 @@ if(PLATFORM STREQUAL "ANDROID")
     message(FATAL_ERROR "Unsupported Android architecture: ${ANDROID_ABI}")
   endif()
 
-  set(BUILD_DIR "android/${ARCH}")
+  set(BUILD_DIR "Android/${ARCH}")
 elseif(PLATFORM STREQUAL "IOS")
-  set(BUILD_DIR "ios")
+  set(BUILD_DIR "iOS")
 elseif(PLATFORM STREQUAL "Mac")
   set(BUILD_DIR "Mac")
 elseif(PLATFORM STREQUAL "Linux")
