Refactor and standardize platform dependent paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix" FORCE)
 
-if(PLATFORM STREQUAL "ANDROID")
+if(PLATFORM STREQUAL "Android")
   if(ANDROID_ABI STREQUAL "armeabi-v7a")
     set(ARCH "armv7-a")
   elseif(ANDROID_ABI STREQUAL "arm64-v8a")
@@ -27,12 +27,8 @@ if(PLATFORM STREQUAL "ANDROID")
   endif()
 
   set(BUILD_DIR "Android/${ARCH}")
-elseif(PLATFORM STREQUAL "IOS")
-  set(BUILD_DIR "iOS")
-elseif(PLATFORM STREQUAL "Mac")
-  set(BUILD_DIR "Mac")
-elseif(PLATFORM STREQUAL "Linux")
-  set(BUILD_DIR "Linux")
+else()
+  set(BUILD_DIR ${PLATFORM})
 endif()
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${BUILD_DIR}/lib)
@@ -54,7 +50,7 @@ endif()
 add_subdirectory(lib)
 
 # iOS and Android don't support Google Test test runner.
-if(PLATFORM STREQUAL "IOS" OR PLATFORM STREQUAL "ANDROID")
+if(PLATFORM STREQUAL "iOS" OR PLATFORM STREQUAL "Android")
   message("Google Test is unsupported on ${PLATFORM}")
 else()
   include(CTest)
