--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB CRYPTO_SDK_SRC
 )
 
 # Currently, there is not support for universal/fat libraries on Android.
-if(PLATFORM STREQUAL "ANDROID")
+if(PLATFORM STREQUAL "Android")
   if(ANDROID_ABI STREQUAL "armeabi-v7a")
     set(ARCH "armv7-a")
   elseif(ANDROID_ABI STREQUAL "arm64-v8a")
@@ -25,20 +25,11 @@ if(PLATFORM STREQUAL "ANDROID")
   set(LIBGCRYPT_LIBRARY ${LIBGCRYPT_DIR}/${ARCH}/lib/libgcrypt.a)
   set(LIBGCRYPT_INCLUDE_DIRS ${LIBGCRYPT_DIR}/${ARCH}/include)
 else()
-  if(PLATFORM STREQUAL "IOS")
-    set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/iOS/libgpg-error)
-    set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/iOS/libgcrypt)
-  elseif(PLATFORM STREQUAL "Mac")
-    set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/Mac/libgpg-error)
-    set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/Mac/libgcrypt)
-  elseif(PLATFORM STREQUAL "Linux")
-    set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/Linux/libgpg-error)
-    set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/Linux/libgcrypt)
-  endif()
-
+  set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/${PLATFORM}/libgpg-error)
   set(LIBGPG_ERROR_LIBRARY ${LIBGPG_ERROR_DIR}/lib/libgpg-error.a)
   set(LIBGPG_ERROR_INCLUDE_DIRS ${LIBGPG_ERROR_DIR}/include/)
 
+  set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/${PLATFORM}/libgcrypt)
   set(LIBGCRYPT_LIBRARY ${LIBGCRYPT_DIR}/lib/libgcrypt.a)
   set(LIBGCRYPT_INCLUDE_DIRS ${LIBGCRYPT_DIR}/include)
 endif()
