Lowercase platform names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix" FORCE)
 
-if(PLATFORM STREQUAL "Android")
+if(PLATFORM STREQUAL "android")
   if(ANDROID_ABI STREQUAL "armeabi-v7a")
     set(ARCH "armv7-a")
   elseif(ANDROID_ABI STREQUAL "arm64-v8a")
@@ -26,7 +26,7 @@ if(PLATFORM STREQUAL "Android")
     message(FATAL_ERROR "Unsupported Android architecture: ${ANDROID_ABI}")
   endif()
 
-  set(BUILD_DIR "Android/${ARCH}")
+  set(BUILD_DIR "android/${ARCH}")
 else()
   set(BUILD_DIR ${PLATFORM})
 endif()
@@ -50,7 +50,7 @@ endif()
 add_subdirectory(lib)
 
 # iOS and Android don't support Google Test test runner.
-if(PLATFORM STREQUAL "iOS" OR PLATFORM STREQUAL "Android")
+if(PLATFORM STREQUAL "ios" OR PLATFORM STREQUAL "android")
   message("Google Test is unsupported on ${PLATFORM}")
 else()
   include(CTest)
