--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB CRYPTO_SDK_SRC
 )
 
 # Currently, there is not support for universal/fat libraries on Android.
-if(PLATFORM STREQUAL "Android")
+if(PLATFORM STREQUAL "android")
   if(ANDROID_ABI STREQUAL "armeabi-v7a")
     set(ARCH "armv7-a")
   elseif(ANDROID_ABI STREQUAL "arm64-v8a")
@@ -17,11 +17,11 @@ if(PLATFORM STREQUAL "Android")
     message(FATAL_ERROR "Unsupported Android architecture: ${ANDROID_ABI}")
   endif()
 
-  set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/Android/libgpg-error)
+  set(LIBGPG_ERROR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/android/libgpg-error)
   set(LIBGPG_ERROR_LIBRARY ${LIBGPG_ERROR_DIR}/${ARCH}/lib/libgpg-error.a)
   set(LIBGPG_ERROR_INCLUDE_DIRS ${LIBGPG_ERROR_DIR}/${ARCH}/include/)
 
-  set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/Android/libgcrypt)
+  set(LIBGCRYPT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../build/android/libgcrypt)
   set(LIBGCRYPT_LIBRARY ${LIBGCRYPT_DIR}/${ARCH}/lib/libgcrypt.a)
   set(LIBGCRYPT_INCLUDE_DIRS ${LIBGCRYPT_DIR}/${ARCH}/include)
 else()
