--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,11 @@ version: 2
 jobs:
   build-linux:
     docker:
-      - image: circleci/android:api-28-alpha
+      - image: debian:stretch
     steps:
       - checkout
-      - run: ./.circleci/setup-cmake.sh
       - run: ./.circleci/setup-rngd.sh
+      - run: ./.circleci/setup-sdk.sh
       - run: ./build.sh
 
 workflows:
