Fix Docker build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
     steps:
       - checkout
       - run: ./.circleci/setup-rngd.sh
-      - run: docker build -f Dockerfile.sdk.base -t orbs:sdk-base
-      - run: docker build -f Dockerfile.sdk -t orbs:sdk
+      - run: docker build -f Dockerfile.sdk.base -t orbs:sdk-base .
+      - run: docker build -f Dockerfile.sdk -t orbs:sdk .
 
 workflows:
   version: 2
