--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - run: ./.circleci/setup-rngd.sh
       - run: docker build -f Dockerfile.sdk.base -t orbs:base-sdk .
       - run: docker build -f Dockerfile.sdk -t orbs:sdk .
-      - run: ./circleci/export.sh
+      - run: ./.circleci/export.sh
 
 workflows:
   version: 2
